Simplify daemon launcher and build conventions